--- a/src/contact.css
+++ b/src/contact.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: 100vh;
     background: #1F1F1F;
+    padding-top: 50px;
 }
 
 .contact-head{
@@ -38,7 +39,7 @@
     width: 90%;
     margin: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .contact-email-section{
@@ -50,14 +51,19 @@
 }
 
 
-.contacts .contacts-item h5{
+.contacts .contacts-item h4{
     font-family: 'Chivo';
     font-style: normal;
     font-weight: 900;
     font-size: 18px;
     line-height: 21px;
     letter-spacing: 0.03em;
+    margin-bottom: 5px;
     color: #FFFFFF;
+}
+
+.contacts .contacts-item a:hover{
+    color: #0B74BF;
 }
 
 .contacts .contacts-item a{
@@ -68,7 +74,6 @@
     line-height: 21px;
     text-align: center;
     letter-spacing: 0.03em;
-
     color: #FFFFFF;
 }
 
@@ -89,23 +94,19 @@
     font-weight: 400;
     font-size: 36px;
     line-height: 43px;
-    /* identical to box height */
-
     text-align: center;
     letter-spacing: 0.03em;
-
     color: #FFFFFF;
 }
 
+.contact-email-section a:hover{
+    color: #0B74BF;
+}
+
 .contact-us .contacts{
-    /* width: 100%; */
     display: flex;
     justify-content: space-between;
     list-style: none;
-}
-
-.contacts-item h5{
-    margin-bottom: 5px;
 }
 
 .contacts-item a{
@@ -120,6 +121,10 @@
     line-height: 43px;
     text-align: center;
     letter-spacing: 0.03em;
+    color: #0B74BF;
+}
+
+.follow-us .platforms a:hover{
     color: #0B74BF;
 }
 
@@ -167,4 +172,84 @@
     letter-spacing: 0.03em;
     color: #FFFFFF;
     text-decoration: none;
+}
+
+@media only screen and (min-width: 820px) {
+    .maps-mob-iframe{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 820px) {
+    .contact{
+        height: auto;
+    }
+
+    .contact-head{
+        margin-bottom: -1em;
+        font-size: 60px;
+        line-height: 75px;
+    }
+
+    .contact-us .contacts{
+        display: block;
+        justify-content: space-between;
+    }
+
+    .contact-us{
+        margin-top: 50px;
+        width: 350px;
+    }
+
+    .contact-us .contacts .contacts-item a{
+        font-size: 22px;
+        line-height: 17px;
+    }
+
+    .contact-head-6{
+        font-size: 18px;
+        line-height: 17px;
+    }
+
+    .email-us{
+        margin-top: -50px;
+        width: 350px;
+    }
+
+    .email-us a{
+        font-size: 22px;
+        line-height: 17px;
+    }
+
+    .google-maps{
+        display: none;
+    }
+
+    .maps-mob-iframe{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+        width: 95%;
+        height: auto;
+        border-radius: 20px;
+    }
+
+    .contact-middle-section{
+        flex-direction: column;
+    }
+
+    .follow-us h2{
+        margin-left: 20px;
+        margin-top: -30px;
+        margin-bottom: 20px;
+        text-align: start;
+    }
+
+    .contact-us h3{
+        margin-bottom: 5px;
+        font-size: 36px;
+        line-height: 43px;
+    }
 }
