--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -470,6 +470,40 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-sepia:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .fixed{
   position: fixed;
 }
@@ -486,10 +520,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 0px;
   right: 0px;
   bottom: 0px;
-  left: 0px;
-}
-
-.left-0{
   left: 0px;
 }
 
@@ -545,6 +575,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1.5rem;
 }
 
+.mr-6{
+  margin-right: 1.5rem;
+}
+
 .block{
   display: block;
 }
@@ -555,10 +589,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex{
   display: flex;
-}
-
-.hidden{
-  display: none;
 }
 
 .h-screen{
@@ -581,22 +611,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1.25rem;
 }
 
-.h-16{
-  height: 4rem;
-}
-
 .h-20{
   height: 5rem;
 }
 
-.h-80{
-  height: 20rem;
+.h-36{
+  height: 9rem;
 }
 
-.h-max{
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+.h-96{
+  height: 24rem;
+}
+
+.h-7{
+  height: 1.75rem;
+}
+
+.h-72{
+  height: 18rem;
+}
+
+.min-h-screen{
+  min-height: 100vh;
 }
 
 .w-full{
@@ -607,28 +643,63 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1.25rem;
 }
 
-.w-40{
-  width: 10rem;
-}
-
 .w-max{
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
 }
 
-.w-min{
-  width: -webkit-min-content;
-  width: -moz-min-content;
-  width: min-content;
+.w-40{
+  width: 10rem;
 }
 
-.w-20{
-  width: 5rem;
+.w-48{
+  width: 12rem;
+}
+
+.w-72{
+  width: 18rem;
+}
+
+.w-96{
+  width: 24rem;
+}
+
+.w-\[30rem\]{
+  width: 30rem;
+}
+
+.flex-shrink-0{
+  flex-shrink: 0;
 }
 
 .shrink-0{
   flex-shrink: 0;
+}
+
+.snap-x{
+  -ms-scroll-snap-type: x var(--tw-scroll-snap-strictness);
+      scroll-snap-type: x var(--tw-scroll-snap-strictness);
+}
+
+.snap-center{
+  scroll-snap-align: center;
+}
+
+.scroll-mt-24{
+  scroll-margin-top: 6rem;
+}
+
+.scroll-mt-20{
+  scroll-margin-top: 5rem;
+}
+
+.scroll-mt-16{
+  scroll-margin-top: 4rem;
+}
+
+.-scroll-mt-20{
+  scroll-margin-top: -5rem;
 }
 
 .flex-col{
@@ -637,14 +708,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .items-center{
   align-items: center;
-}
-
-.justify-start{
-  justify-content: flex-start;
-}
-
-.justify-center{
-  justify-content: center;
 }
 
 .justify-between{
@@ -657,16 +720,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-4 > :not([hidden]) ~ :not([hidden]){
+.space-x-6 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.overflow-x-auto{
+  overflow-x: auto;
+}
+
+.overflow-x-scroll{
+  overflow-x: scroll;
 }
 
 .scroll-smooth{
@@ -675,6 +752,19 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-full{
   border-radius: 9999px;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-accent{
+  --tw-border-opacity: 1;
+  border-color: rgb(11 116 191 / var(--tw-border-opacity));
 }
 
 .bg-background{
@@ -687,6 +777,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(11 116 191 / var(--tw-bg-opacity));
 }
 
+.bg-debug{
+  --tw-bg-opacity: 1;
+  background-color: rgb(157 23 77 / var(--tw-bg-opacity));
+}
+
+.bg-transparent{
+  background-color: transparent;
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -695,6 +794,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .object-center{
   -o-object-position: center;
      object-position: center;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .px-6{
@@ -798,43 +901,42 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: linear;
 }
 
+.hover\:bg-accent:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(11 116 191 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-opacity-60:hover{
+  --tw-bg-opacity: 0.6;
+}
+
+.hover\:bg-opacity-30:hover{
+  --tw-bg-opacity: 0.3;
+}
+
 @media (min-width: 640px){
   .sm\:right-6{
     right: 1.5rem;
   }
 
-  .sm\:ml-auto{
-    margin-left: auto;
+  .sm\:right-12{
+    right: 3rem;
   }
 
   .sm\:mt-10{
     margin-top: 2.5rem;
   }
 
-  .sm\:h-8{
-    height: 2rem;
-  }
-
-  .sm\:h-52{
-    height: 13rem;
+  .sm\:ml-auto{
+    margin-left: auto;
   }
 
   .sm\:h-48{
     height: 12rem;
   }
 
-  .sm\:h-36{
-    height: 9rem;
-  }
-
-  .sm\:h-max{
-    height: -webkit-max-content;
-    height: -moz-max-content;
-    height: max-content;
-  }
-
-  .sm\:h-full{
-    height: 100%;
+  .sm\:h-8{
+    height: 2rem;
   }
 
   .sm\:w-min{
@@ -843,75 +945,26 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: min-content;
   }
 
-  .sm\:w-8{
-    width: 2rem;
-  }
-
-  .sm\:w-52{
-    width: 13rem;
-  }
-
   .sm\:w-48{
     width: 12rem;
   }
 
-  .sm\:w-36{
-    width: 9rem;
-  }
-
-  .sm\:w-56{
-    width: 14rem;
-  }
-
-  .sm\:w-max{
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-  }
-
-  .sm\:w-full{
-    width: 100%;
+  .sm\:w-8{
+    width: 2rem;
   }
 
   .sm\:flex-row{
     flex-direction: row;
   }
 
-  .sm\:justify-between{
-    justify-content: space-between;
-  }
-
-  .sm\:space-x-4 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1rem * var(--tw-space-x-reverse));
-    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .sm\:space-x-6 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
   .sm\:text-right{
     text-align: right;
-  }
-
-  .sm\:text-sub-title{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-    letter-spacing: 0rem;
   }
 
   .sm\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
     letter-spacing: 0.05rem;
-  }
-
-  .sm\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
   }
 
   .sm\:text-mini{
@@ -924,64 +977,30 @@ Ensure the default browser behavior of the `hidden` attribute.
     letter-spacing: 0.25rem;
   }
 
-  .sm\:font-bold{
-    font-weight: 700;
+  .sm\:text-sub-title{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    letter-spacing: 0rem;
   }
 
   .sm\:font-black{
     font-weight: 900;
   }
 
-  .sm\:uppercase{
-    text-transform: uppercase;
+  .sm\:font-bold{
+    font-weight: 700;
   }
 
-  .sm\:leading-none{
-    line-height: 1;
+  .sm\:uppercase{
+    text-transform: uppercase;
   }
 
   .sm\:leading-tight{
     line-height: 1.25;
   }
-
-  .sm\:tracking-normal{
-    letter-spacing: 0em;
-  }
-
-  .sm\:tracking-wider{
-    letter-spacing: 0.05em;
-  }
 }
 
 @media (min-width: 768px){
-  .md\:w-min{
-    width: -webkit-min-content;
-    width: -moz-min-content;
-    width: min-content;
-  }
-
-  .md\:flex-grow{
-    flex-grow: 1;
-  }
-
-  .md\:grow{
-    flex-grow: 1;
-  }
-
-  .md\:flex-row{
-    flex-direction: row;
-  }
-
-  .md\:justify-between{
-    justify-content: space-between;
-  }
-
-  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1rem * var(--tw-space-x-reverse));
-    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
   .md\:space-x-6 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
     margin-right: calc(1.5rem * var(--tw-space-x-reverse));
@@ -991,5 +1010,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   .md\:py-4{
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 }
