--- a/src/events/events.css
+++ b/src/events/events.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@900&family=Montserrat:wght@600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@900&family=Montserrat:wght@400;500;800&display=swap');
 #bg {
-    position: fixed; 
-    top: 0; 
-    left: 0; 
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: auto;
     min-width: 100%;
@@ -27,7 +27,7 @@
 
 
 .card-collection{
-    margin: 10% auto;
+    margin-top: 16%;
     display: -webkit-flex;
 	display: flex;
 	-webkit-justify-content: space-around;
@@ -61,10 +61,10 @@
 
 img#card-image {
     border-radius: 28px 28px 0 0;
-  }
-  
+}
+
 .container{
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     display: flex;
     justify-content:center;
@@ -185,17 +185,27 @@ button:hover{
 }
 
 
-@media screen and (max-width: 768px)
+@media screen and (max-width: 810px)
 {
     div.headtext{
-        font-size: 6em;
+        display: flex;
+        justify-content: start;
+        font-size: 3em;
+    }
+    .card{
+        margin: 1em;
     }
     .card-collection{
-        margin: 25% auto;
+        margin-top: 7rem;
     }
     .modal-header{
         font-size: 2rem;
 
+    }
+    .modal{
+        width: 100%;
+        height: 70%;
+        overflow: auto;
     }
     .modal-body{
         font-size: 1rem;
