--- a/src/events/events.css
+++ b/src/events/events.css
@@ -27,7 +27,7 @@
 
 
 .card-collection{
-    margin-top: 16%;
+    margin: 10% auto;
     display: -webkit-flex;
 	display: flex;
 	-webkit-justify-content: space-around;
@@ -64,7 +64,6 @@ img#card-image {
 }
 
 .container{
-    /* height: 100%; */
     width: 100%;
     display: flex;
     justify-content:center;
@@ -123,9 +122,9 @@ button:hover{
     transition: 200ms ease-in-out;
     border-radius: 40px;
     z-index: 10;
-    background-color: rgba(255, 255, 255, 0.705);
-    backdrop-filter: blur(16px) saturate(100%);
-    -webkit-backdrop-filter: blur(10px) saturate(150%);
+    background-color: rgba(0, 0, 0, 0.226);
+    backdrop-filter: blur(30px) saturate(200%);
+    -webkit-backdrop-filter: blur(30px) saturate(200%);
     width: 1700px;
     height: 900px;
     max-width: 80%;
@@ -140,7 +139,7 @@ button:hover{
     font-family: "Montserrat",sans-serif;
     font-weight: 800;
     letter-spacing: 1px;
-    color: rgb(12, 17, 22);
+    color: rgb(255, 255, 255);
     padding: 30px 60px 15px;
     display: flex;
     flex-direction: row;
@@ -162,6 +161,7 @@ button:hover{
 .modal-body{
     padding:8px 40px 40px 60px;
     font-size: 20px;
+    color: rgb(255, 255, 255);
     font-family: "Montserrat",sans-serif;
     font-weight: 600;
     letter-spacing: 0.5px;
@@ -179,42 +179,81 @@ button:hover{
     pointer-events: none;
 }
 
+body::-webkit-scrollbar{
+    width: 12px;
+    margin: auto;
+}
+
+body::-webkit-scrollbar-track {
+    height: 80%;
+    background: rgba(128, 143, 163, 0.562);        /* color of the tracking area */
+  }
+  
+body::-webkit-scrollbar-thumb {
+    height: 20%;
+    background-color: rgb(0, 0, 0);    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 2px solid whitesmoke;
+  }
+
+.modal::-webkit-scrollbar {
+    width: 12px;
+    margin: auto;
+  }
+  
+ .modal::-webkit-scrollbar-track {
+    height: 80%;
+    background: 0;        /* color of the tracking area */
+  }
+  
+.modal::-webkit-scrollbar-thumb {
+    height: 20%;
+    background-color: rgba(239, 239, 247, 0.863);    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+      /* creates padding around scroll thumb */
+  }
+
+
+
 #overlay.active{
     pointer-events: all;
     opacity: 1;
 }
 
+a{
+    color: rgba(134, 248, 248, 0.788);
+}
 
-@media screen and (max-width: 810px)
+@media screen and (max-width: 820px)
 {
     div.headtext{
-        display: flex;
-        justify-content: start;
-        font-size: 3em;
+        font-size: 6em;
     }
     .card{
         margin: 1em;
     }
     .card-collection{
-        margin-top: 7rem;
+        margin: 25% auto;
     }
-    .modal-header{
-        font-size: 2rem;
 
-    }
     .modal{
         width: 100%;
-        height: 70%;
+        height: 90%;
         overflow: auto;
     }
+
+    .modal-header{
+        font-size: 1.8rem;
+
+    }
     .modal-body{
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
     .modal-header .close-button{
         font-size: 2rem;
         font-weight: 100;
-        top: 4%;
-        left: 82%;
+        top: 3%;
+        left: 85%;
         bottom: 90%;
     }
 }
