--- a/src/contact.css
+++ b/src/contact.css
@@ -36,12 +36,13 @@
 }
 
 
-.contacts .contacts-item h4{
+.contacts .contacts-item h5{
     font-style: normal;
-    font-weight: 900;
+    font-weight: 600;
     font-size: 18px;
     line-height: 21px;
     letter-spacing: 0.03em;
+    margin-top: 5px;
     margin-bottom: 5px;
     color: #FFFFFF;
 }
@@ -77,7 +78,7 @@
     text-decoration: none;
     font-style: normal;
     font-weight: 400;
-    font-size: 36px;
+    font-size: 20px;
     line-height: 43px;
     text-align: center;
     letter-spacing: 0.03em;
@@ -195,6 +196,11 @@
         width: 312px;
     }
 
+    .contacts .contacts-item h5{
+        margin-top: 15px;
+    }
+
+
     .contact-us .contacts .contacts-item a{
         font-size: 22px;
         line-height: 17px;
@@ -208,6 +214,10 @@
     .email-us{
         margin-top: -50px;
         width: 312px;
+    }
+
+    .email-us h3{
+        margin-bottom: 15px;
     }
 
     .email-us a{
