--- a/src/events/events.css
+++ b/src/events/events.css
@@ -1,15 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-body
-    {
-      background-color: #0D0D0D;
-    }
+body {
+  background-color: #0d0d0d;
+}
 
 .headtext {
   position: fixed;
   width: 250px;
   height: 77px;
-  left:30px;
-  top:100px;
+  left: 30px;
+  top: 100px;
 
   font-family: 'Montserrat';
   font-style: normal;
@@ -53,9 +52,6 @@ body
   right: 0;
   border-radius: 28px;
 }
-
-
-
 
 .name {
   font-size: 40px;
@@ -180,7 +176,6 @@ button:hover {
   pointer-events: none;
 }
 
-
 #overlay.active {
   pointer-events: all;
   opacity: 1;
@@ -191,8 +186,8 @@ a {
 }
 
 @media screen and (max-width: 768px) {
- /* BACK BUTTON */
-  a[href="/"] {
+  /* BACK BUTTON */
+  a[href='/'] {
     font-size: 0.625rem !important;
   }
 
@@ -201,7 +196,6 @@ a {
     justify-content: flex-start;
     font-size: 3em;
   }
-
 
   .card {
     margin: 1em;
@@ -248,12 +242,9 @@ a {
 }
 
 .outline-txt {
-  color: #0D0D0D;
-  text-shadow:
-  -1px -1px 0 #fff,
-  1px -1px 0 #fff,
-  -1px 1px 0 #fff,
-  1px 1px 0 #fff;  
+  color: #0d0d0d;
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
+    1px 1px 0 #fff;
   letter-spacing: 5px;
   opacity: 0.3;
   font-size: 80px !important;
